@@ -1,0 +1,13 @@
+# http://module-build.sourceforge.net/META-spec.html
+#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
+name:         Geo-WeatherNOAA
+version:      4.38
+version_from: WeatherNOAA.pm
+installdirs:  site
+requires:
+    LWP::Simple:                   0
+    LWP::UserAgent:                0
+    Tie::IxHash:                   0
+
+distribution_type: module
+generated_by: ExtUtils::MakeMaker version 6.17
